# mlai

./: .buildinfo  .coveragerc  .flake8  .gitignore  .nojekyll  README.html  README.md  contributing.html  coverage_analysis.md  debug_gradients.py  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  quickstart.html  search.html  searchindex.js  setup.py  tenets.html  test_2x2_attention.py  test_coverage_reproduction.py  test_environment_reproduction.py  test_minimal_reproduction.py  test_mlai_coverage_reproduction.py  test_simple_attention.py  test_softmax.py  whats_next_script.html  yaml_frontmatter_examples.html
_modules/: index.html
_sources/: installation.rst.txt  quickstart.rst.txt  yaml_frontmatter_examples.md.txt
api/: deepgp_tutorial.html  gp_tutorial.html  index.html  mlai.html  mountain_car.html  plot.html
backlog/: README.md  index.html  index.md
cip/: README.md  cip0001.html  cip0001.md  cip0002.html  cip0002.md  cip0003.md  cip0004.md  cip0005.md  cip0006.md  cip0007.md  cip_template.md  index.html
docs/: README.md  conf.py  contributing.rst  index.rst
mlai/: .#models.py  __init__.py  data.py  deepgp_tutorial.py  dimred.py  experimental.py  gaussian_processes.py  jax.py  linear_models.py  loss.py  mlai.py  models.py  mountain_car.py  neural_networks.py  optimisation.py  plot.py  transformer.py  utils.py
tenets/: README.md  combine_tenets.py  tenet_template.md  vibesafe-mlai-tenets.md
tests/: __init__.py  conftest.py  test_transformer.py
tutorials/: basis_functions.html  deepgp_tutorial.html  (+6 more)
(+79 files in other folders)
