[tool.poetry]
name = "mlai"
version = "0.1.2"
description = "Package of simple models and plotting routines for teaching and lecturing about machine learning."
authors = ["Neil D. Lawrence <lawrennd@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lawrennd/mlai"
packages = [{include = "mlai"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pods = "*"
pandas = "*"
matplotlib = "*"
IPython = "*"
scipy = "*"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = "^3.2.0"
myst-parser = "^4.0.1"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-benchmark = "^4.0.0"
hypothesis = "^6.100.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
"mountain car demo" = ["GPy"]
"GP Tutorials" = ["GPy"]

